[package]
name = "hel-css-formatter"
authors = ["Hellaeh <me@hellaeh.com>"]
version = "0.1.0"
edition = "2021"
description = "An opinionated CSS formatter"
license = "MIT"
repository = "https://github.com/Hellaeh/css-formatter.git"
keywords = ["CSS", "formatter"]
readme = "README.md"

[dependencies]
hel-trie = { path = "../../crates/trees/trie" }

[dev-dependencies]
hel-colored = { version = "0.5.1", features = ["nested"] }
